[package]
name = "xsi"
version = "0.1.0"
authors = ["adjivas <adjivas@users.noreply.github.com>"]
description = "XSI message queue"
license = "gpl-3.0"
repository = "https://github.com/adjivas/msg-xsi"

[dependencies.sig]
git = "https://github.com/adjivas/sig.git"

[dependencies.io]
git = "https://github.com/adjivas/io.git"

[dependencies.libc]
version = "*"
