[package]
name = "msg"
version = "0.1.0"
authors = ["adjivas <adjivas@users.noreply.github.com>"]
description = "XSI message queue"
documentation = "http://adjivas.github.io/msg/msg"
repository = "https://github.com/adjivas/msg.git"
readme = "README.md"
keywords = ["XSI", "message", "msg"]
license = "GPL-3.0"

[dependencies]
io-synesthesist = ">= 0.1.0"
